--- a/src/content/graphos/cloud-routing/dedicated/lattice.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice.mdx
@@ -1,86 +1,84 @@
 ---
-title: Configure Amazon VPC Lattice
+title: Amazon VPC Lattice configuration
 subtitle: Securely communicate with subgraphs on your Amazon VPC
-description: Configure Amazon VPC Lattice to send traffic to and receive traffic from your Apollo Cloud Dedicated router.
+description: Configure Amazon VPC Lattice to send traffic to and receive traffic from your Apollo GraphOS cloud router.
 ---
 
 <DedicatedPreview />
 
-Cloud Dedicated uses [Amazon VPC Lattice](https://aws.amazon.com/vpc/lattice/) to send traffic to your subgraphs running in an Amazon VPC without exposing them to the internet. With Lattice, you can define services and share them with the Apollo AWS organization.
-
-You can provision VPC Lattice with the [Apollo Terraform module](https://github.com/apollographql/terraform-graphos-aws). Refer to the [module's README](https://github.com/apollographql/terraform-graphos-aws#apollo-graphos-cloud-private-subgraphs-module) for more information.
+Cloud Dedicated uses [Amazon VPC Lattice](https://aws.amazon.com/vpc/lattice/) to send traffic to subgraphs running in an Amazon VPC without exposing them to the internet.
 
 ```mermaid
 flowchart LR;
   clients(Clients);
   subgraph "Apollo Cloud";
-    router(["Cloud <br/> Dedicated"]);
+    router(["Cloud <br/> router"]);
   end;
-  resourceshare["AWS RAM <br/> Resource <br/> Share"]
-  subgraph "AWS Virtual Private Cloud"
-    lattice[Amazon VPC <br/> Lattice <br/> Service]
+  subgraph "Amazon Virtual Private Cloud"
+    lattice[Amazon VPC <br/> Lattice service]
     service1[Subgraph 1];
     service2[Subgraph 2];
     service3[Subgraph 3];
   end;
 
-  router --> resourceshare
-  resourceshare --> lattice
+  router --> lattice
   lattice --> service1 & service2 & service3;
 
   clients -->|Requests| router;
 ```
 
-<Note>
-
-- You can only use Lattice for subgraphs in the same AWS region as your cloud router. If you need to run subgraphs in different AWS regions or run your workloads in a region not yet supported by Cloud Dedicated, please <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">let us know</TrackableLink>.
-- Using Amazon VPC Lattice incurs costs outside of your Cloud Dedicated spend. Refer to the [Lattice pricing page](https://aws.amazon.com/vpc/lattice/pricing/) to learn more.
-
-</Note>
-
-## Create and share an Amazon VPC Lattice service
-
-To allow Cloud Dedicated to send traffic to your private subgraphs, you must:
-
-1. Create one or more Amazon VPC Lattice target groups.
-2. Create one or more Amazon VPC Lattice services.
-3. Share the service(s) with the Apollo AWS Organization.
-4. Provide the service(s) routing information in your Apollo Organization configuration page.
-
-This guide offers step-by-step instructions for each stage.
+This guide shows how to create Lattice services and share them with GraphOS. This configuration lets your GraphOS cloud routers securely communicate with your private subgraphs.
 
 <Note>
 
-The AWS Console interface may differ slightly from the screenshots in this guide.
+Using Amazon VPC Lattice incurs costs outside of your GraphOS Dedicated spend. Refer to the [Lattice pricing page](https://aws.amazon.com/vpc/lattice/pricing/) to learn more.
 
 </Note>
 
-### Step 1. Create Amazon VPC Lattice target groups
 
-A Lattice _target group_ is a collection of targets, or compute resources, that run your application or service. You must set these up so your Lattice services can route requests accurately. Check out the [AWS documentation](https://docs.aws.amazon.com/vpc-lattice/latest/ug/target-groups.html) to learn more.
+## How GraphOS ensures subgraph security through Lattice
+
+When you first share Lattice services with GraphOS, it scans the Lattice services to retrieve their ARNs and domain names.
+Then, when you add a private subgraph to a cloud supergraph, GraphOS checks that the subgraph's domain matches one of the Lattice services associated with your GraphOS organization.
+
+As a second line of defense, supergraphs use AWS IAM permissions and SigV4 to only allow traffic to subgraphs in the same GraphOS organization.
+
+## Configuration overview
+
+To allow GraphOS cloud routers to send traffic to private subgraphs in an Amazon VPC, you must:
+
+1. Create a Lattice target group for each subgraph hosted in your Amazon VPC.
+2. Create a Lattice service for each graph variant in GraphOS.
+3. Share your Lattice service(s) with the Apollo AWS Organization via a resource share.
+4. Link the resource share in GraphOS Studio.
+
+This guide offers instructions for each step.
+
+You can also use the [Apollo Terraform module](https://github.com/apollographql/terraform-graphos-aws) to provision Lattice target groups, services, and resource shares.
+The module completes steps 1 - 3 of this configuration guide. Once you've set it up, you can skip to [step 4](#step-4-link-resource-share)—linking the provisioned resource share in GraphOS Studio.
+Refer to the [module's README](https://github.com/apollographql/terraform-graphos-aws#apollo-graphos-cloud-private-subgraphs-module) for more information.
+
+<Note>
+
+- You can use Amazon VPC Lattice in your organization for other uses than routing GraphOS traffic to subgraphs. A Lattice service can be associated with multiple service networks, and GraphOS associates your Lattice services with its own service network.
+- You can only use Lattice for subgraphs in the same AWS region as your cloud router. If you need to run subgraphs in different AWS regions or run your workloads in a region not yet supported by Dedicated, please <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">get in touch</TrackableLink>.
+
+</Note>
+
+## Step 1. Create a target group
+
+A VPC Lattice _target group_ is a collection of targets, or compute resources, that run your application or service.
+In the GraphOS context, a target group maps to a subgraph.
+If you have multiple subgraphs, repeat these steps for each subgraph.
+
 
 1. In the AWS Console for your region of choice, go to the VPC service page:
 
-- [US East (N. Virginia) - `us-east-1`](https://us-east-1.console.aws.amazon.com/vpc/home?region=us-east-1)
-- [Europe (Ireland) - `eu-west-1`](https://eu-west-1.console.aws.amazon.com/vpc/home?region=eu-west-1)
+- [US East (N. Virginia) - us-east-1](https://us-east-1.console.aws.amazon.com/vpc/home?region=us-east-1)
+- [Europe (Ireland) - eu-west-1](https://eu-west-1.console.aws.amazon.com/vpc/home?region=eu-west-1)
 
-2. In the menu on the left, scroll down and open **Target groups** in the **VPC Lattice** section.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page left menu"
-    src="../../img/cloud-dedicated/vpc-lattice-menu.jpg"
-    width="175px"
-  />
-
+2. In the left navigation, scroll down and open **VPC Lattice > Target groups**.
 3. Click **Create target group** on the top right.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page"
-    src="../../img/cloud-dedicated/create-target-group.jpg"
-  />
-
 4. In the **Basic configuration** section, set the properties that match your subgraph resources.
 
   <img
@@ -89,15 +87,8 @@ A Lattice _target group_ is a collection of targets, or compute resources, that 
     src="../../img/cloud-dedicated/target-group-configuration.jpg"
   />
 
-5. (Optional) If you use a target type with health checks, ensure you configure your health checks correctly, or Lattice will not be able to send traffic to your subgraphs.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page"
-    src="../../img/cloud-dedicated/target-group-health-checks.jpg"
-  />
-
-6. Register the targets based on your chosen target type.
+5. (Optional) If you use a target type with health checks, ensure you configure your health checks. Otherwise, Lattice can't send traffic to your subgraphs.
+6. Register the targets based on your chosen target type. For example, if you selected **IP addresses** as your target type, add each IP address.
 
   <img
     className="screenshot"
@@ -106,48 +97,28 @@ A Lattice _target group_ is a collection of targets, or compute resources, that 
   />
 
 7. Review your targets to make sure all information is correct.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page"
-    src="../../img/cloud-dedicated/review-targets.jpg"
-  />
-
 8. Click **Create target group** at the bottom right corner of the page.
 
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page"
-    src="../../img/cloud-dedicated/create-target-group-final.jpg"
-  />
+Congratulations! You've created an Amazon VPC Lattice target group.
+Repeat this process for each subgraph you want to share with GraphOS.
 
-Congratulations! You've created an Amazon VPC Lattice target group. Repeat this process for each resource you want to share with Cloud Dedicated.
+## Step 2. Create a Lattice service
 
-### Step 2. Create an Amazon VPC Lattice service
+In Lattice, a _service_ represents a self-contained software module.
+A VPC Lattice service has a listener that uses rules, called listener rules, that you can configure to help route traffic to your targets.
+In this step, you create a single VPC Lattice service with listener rules for each of your target groups.
+
+In the GraphOS context, a Lattice service maps to a graph variant.
+Create one service for each of your variants.
 
 1. In the AWS Console for your region, go to the VPC service page:
 
-- [US East (N. Virginia) - `us-east-1`](https://us-east-1.console.aws.amazon.com/vpc/home?region=us-east-1)
-- [Europe (Ireland) - `eu-west-1`](https://eu-west-1.console.aws.amazon.com/vpc/home?region=eu-west-1)
+- [US East (N. Virginia) - us-east-1](https://us-east-1.console.aws.amazon.com/vpc/home?region=us-east-1)
+- [Europe (Ireland) - eu-west-1](https://eu-west-1.console.aws.amazon.com/vpc/home?region=eu-west-1)
 
-2. In the menu on the left, scroll down and open **Services** in the **VPC Lattice** section.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page left menu"
-    src="../../img/cloud-dedicated/vpc-lattice-menu.jpg"
-    width="175px"
-  />
-
+2. In the left navigation, scroll down and open **VPC Lattice > Services**.
 3. Click **Create service** in the top right.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page"
-    src="../../img/cloud-dedicated/create-service.jpg"
-  />
-
-4. In the **Identifiers** section, give the name, description, and tags of your choice for the service.
+4. In the **Identifiers** section, enter a descriptive name for the service. Optionally, enter a description and tags.
 
   <img
     className="screenshot"
@@ -155,15 +126,8 @@ Congratulations! You've created an Amazon VPC Lattice target group. Repeat this 
     src="../../img/cloud-dedicated/service-identifiers.jpg"
   />
 
-5. In the **Custom domain configuration** section, leave the **Specify a custom domain configuration** checkbox **unselected**.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page"
-    src="../../img/cloud-dedicated/custom-domain.jpg"
-  />
-
-6. In the **Service access** section, select the **AWS IAM** authentication type and paste the following authorization policy. This policy ensures that only the AWS Organization for Cloud Dedicated can send traffic to your subgraphs.
+5. In the **Custom domain configuration** section, leave **Specify a custom domain configuration** unchecked.
+6. In the **Service access** section, select the **AWS IAM** authentication type and paste the following authorization policy. This policy ensures that only the Apollo AWS Organization can send traffic to your subgraphs.
 
   ```json showLineNumbers=false
   {
@@ -184,21 +148,13 @@ Congratulations! You've created an Amazon VPC Lattice target group. Repeat this 
   }
   ```
 
-7. (Optional) For extra security, you can audit all the traffic coming to your subgraph by enabling access logs in the **Monitoring** section.
-
+7. (Optional) For extra security, you can audit all the traffic coming to your subgraph by enabling **Access logs** in the **Monitoring** section.
 8. Once you've configured the service, click **Next** on the bottom right of the page.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page"
-    src="../../img/cloud-dedicated/service-monitoring.jpg"
-  />
-
-9. Define routing information to your target groups. Set the protocol to **HTTPS** and the port to **443**.
+9. Define routing information to the target group you created in [Step 1](#step-1-create-lattice-target-group). Set the protocol to **HTTPS** and the port to **443**.
 
   <Note>
 
-  For security reasons, we require you to use HTTPS for your listener. This enforces encryption in transit of the traffic between your GraphOS cloud router and your Lattice listener.
+  For security reasons, Apollo requires you to use HTTPS for your listener. Using HTTPS enforces encryption in transit of the traffic between your GraphOS cloud router and your Lattice service.
 
   </Note>
 
@@ -208,7 +164,7 @@ Congratulations! You've created an Amazon VPC Lattice target group. Repeat this 
     src="../../img/cloud-dedicated/http-listener.jpg"
   />
 
-10. If you have multiple target groups, add a rule for each subgraph.
+10. If you have multiple target groups, add a **Listener rule** for each target group.
 
   <img
     className="screenshot"
@@ -217,65 +173,43 @@ Congratulations! You've created an Amazon VPC Lattice target group. Repeat this 
   />
 
 11. Click **Next** at the bottom right of the page once you've configured your listener.
+12. Don't select a VPC Lattice service network. Your subgraphs will integrate with a service network managed by Apollo. Instead, click the **Next** button at the bottom right of the page.
+13. Ensure the information you've entered is correct. Then click **Create VPC Lattice service** at the bottom right of the page.
 
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page"
-    src="../../img/cloud-dedicated/listener-complete.jpg"
-/>
+Congratulations! You've now created a Lattice service with listeners for your subgraphs.
 
-12. Do NOT select a VPC Lattice service network. Your subgraphs will integrate with a service network managed by Apollo. Instead, click the **Next** button at the bottom right of the page.
+## Step 3. Share Lattice service
 
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page"
-    src="../../img/cloud-dedicated/service-network.jpg"
-  />
+For GraphOS to access your Lattice service, you must share it with the Apollo AWS organization.
+You do this through a _resource share_ in AWS Resource Access Manager (AWS RAM).
+A resource share specifies the resources to share and the consumers with whom to share them.
 
-13. Ensure the information you've entered is correct, then click **Create VPC Lattice service** at the bottom right of the page.
+```mermaid
+flowchart LR;
+  apollo(Apollo Cloud)
+  subgraph "Amazon Virtual Private Cloud"
+    lattice[Amazon VPC <br/> Lattice service]
+    service1[Subgraph 1];
+    service2[Subgraph 2];
+    service3[Subgraph 3];
+  end;
 
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page"
-    src="../../img/cloud-dedicated/create-service-final.jpg"
-  />
+  apollo-. AWS RAM <br/> resource share .- lattice
+  lattice --> service1 & service2 & service3;
+```
 
-Congratulations! You've now created a Lattice service for your subgraphs.
-
-### Step 3. Share the Amazon VPC Lattice service with Cloud Dedicated
+If you have multiple Lattice services, you can share them all through one resource share.
 
 1. In the AWS Console for your region of choice, go to the Resource Access Manager service page:
 
 - [US East (N. Virginia) - us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
 - [Europe (Ireland) - eu-west-1](https://eu-west-1.console.aws.amazon.com/ram/home?region=eu-west-1)
 
-2. In the menu on the left, click **Resource shares** in the **Shared by me** section.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page left menu"
-    src="../../img/cloud-dedicated/vpc-lattice-shared-by-me.jpg"
-    width="175px"
-  />
-
+2. In the left navigation, scroll down and open **Shared by me > Resource shares**.
 3. Click **Create resource share** in the top right corner.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC shared resources page"
-    src="../../img/cloud-dedicated/create-resource-share.jpg"
-  />
-
 4. In the **Resource share name** section, enter a name for your resource share.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC shared resources page"
-    src="../../img/cloud-dedicated/resource-share-name.jpg"
-  />
-
-5. In the **Resources section**, select the resource type **VPC Lattice Services**.
-6. Select all the Lattice services that contain your subgraphs.
+5. In the **Resources section**, select the **VPC Lattice Services** resource type.
+6. Select all the Lattice services that contain subgraphs.
 
   <img
     className="screenshot"
@@ -284,15 +218,8 @@ Congratulations! You've now created a Lattice service for your subgraphs.
   />
 
 7. (Optional) Set tags for your resource share.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC shared resources page"
-    src="../../img/cloud-dedicated/resource-tags.jpg"
-  />
-
 8. Click the **Next** button at the bottom right corner of the page.
-9. Verify that the managed permissions give access to associate the Lattice services with a service network (`vpc-lattice:CreateServiceNetworkServiceAssociation and vpc-lattice:GetService`). Then click the **Next** button at the bottom right of the page.
+9. Verify that the **Managed permissions** give access to associate the Lattice services with a service network (`vpc-lattice:CreateServiceNetworkServiceAssociation` and `vpc-lattice:GetService`). Then click the **Next** button at the bottom right of the page.
 
   <img
     className="screenshot"
@@ -300,7 +227,7 @@ Congratulations! You've now created a Lattice service for your subgraphs.
     src="../../img/cloud-dedicated/managed-permissions.jpg"
   />
 
-10. In the **Principals** section, select **Allow sharing with anyone** with a principal type of **AWS account**, enter the following value for the account ID: `282421723282`, then click the **Add** button.
+10. In the **Principals** section, select **Allow sharing with anyone** with a **principal type** of `AWS account`. Enter the following value for the account ID: `282421723282`, then click the **Add** button.
 
   <img
     className="screenshot"
@@ -309,49 +236,50 @@ Congratulations! You've now created a Lattice service for your subgraphs.
   />
 
 11. Confirm that `282421723282` is the only selected principal for this resource share, then click the **Next** button on the bottom right corner.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC shared resources page"
-    src="../../img/cloud-dedicated/resource-principal-confirmation.jpg"
-  />
-
 12. Confirm that all the information is correct, then click **Create resource share** at the bottom right of the page.
 
-Congratulations! You've now shared your Lattice services with Cloud Dedicated.
+Congratulations! You've now shared your Lattice service(s) with Apollo's AWS organization.
 
-The last step is associating your resource share with the Apollo Organization account.
+The last step is associating your resource share with a graph in GraphOS.
 
 <Note>
 
-- You have 12 hours to associate your resource share—otherwise, AWS Resource Access Manager will fail to process the invitation, and you will have to restart this step.
-- For security purposes, we recommend you continue to the next step immediately after creating the resource share. If you see that the resource share was **Accepted** or **Failed** in the AWS console and you did not follow step 4 of this guide, follow the steps to [remove access to private subgraphs](#removing-access-to-private-subgraphs) and restart this step.
+- You have 12 hours to associate your resource share. Otherwise, AWS RAM will fail to process the invitation, and you must restart this step.
+- For security purposes, we recommend you continue to the next step immediately after creating the resource share. If you see that the resource share was **Accepted** or **Failed** in the AWS console and you didn't follow [step 4](#step-4-link-resource-share) of this guide, follow the steps to [remove access to private subgraphs](./lattice-management#remove-access) and restart this step.
 
 </Note>
 
-### Step 4. Associate your resource share with your Apollo Organization
+## Step 4. Link resource share
+
+At this point, you've shared your Lattice service(s) with the Apollo AWS organization. In this step, you link each service to a particular cloud router in GraphOS Studio.
+The cloud router can then route client requests.
+
+```mermaid
+flowchart LR;
+  clients(Clients);
+  subgraph "Apollo Cloud";
+    router(["Cloud <br/> router"]);
+  end;
+  subgraph "Amazon Virtual Private Cloud"
+    lattice[Amazon VPC <br/> Lattice service]
+    service1[Subgraph 1];
+    service2[Subgraph 2];
+    service3[Subgraph 3];
+  end;
+
+  router --> lattice
+  lattice --> service1 & service2 & service3;
+
+  clients -->|Requests| router;
+```
 
 1. In the AWS Console for your region of choice, go to the Resource Access Manager service page:
 
 - [US East (N. Virginia) - us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
 - [Europe (Ireland) - eu-west-1](https://eu-west-1.console.aws.amazon.com/ram/home?region=eu-west-1)
 
-2. In the menu on the left, click **Resource shares** in the **Shared by me** section.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page left menu"
-    src="../../img/cloud-dedicated/shared-by-me.jpg"
-  />
-
+2. In the left navigation, scroll down and open **Shared by me > Resource shares**.
 3. Click the resource share you created in the previous step.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC resource share page"
-    src="../../img/cloud-dedicated/select-resource-share.jpg"
-  />
-
 4. Copy the **ARN** for the resource share.
 
   <img
@@ -360,9 +288,9 @@ The last step is associating your resource share with the Apollo Organization ac
     src="../../img/cloud-dedicated/resource-share-summary.jpg"
   />
 
-Setup from this point differs based on whether this is [your first private subgraph](#setup-for-new-private-subgraphs) or if you're adding this [service to an existing graph](#setup-for-existing-graphs).
+The next steps differ depending on whether you're creating a [new graph](#setup-for-new-graphs) in GraphOS or adding this [service to an existing graph](#setup-for-existing-graphs).
 
-#### Setup for new private subgraphs
+### Setup for new graphs
 
 1. Go to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
 2. Click the **Create New Graph** tab at the top right of the screen.
@@ -377,58 +305,33 @@ Setup from this point differs based on whether this is [your first private subgr
   </Note>
 
 6. Paste the ARN of the resource share you created and copied from your AWS Console, then click **Link my Resource** and **Next** to continue.
-
-  <img
-    className="screenshot"
-    alt="Linking a Lattice resource"
-    src="../../img/cloud-dedicated/link-lattice-resource.jpg"
-    width="500"
-/>
-
-7. From the dropdown menu, select the Lattice service that you would like to connect to your GraphOS router. A default path of `/api/graphql` is automatically added to the URL. You can change this path if you want to.
-
-  <img
-    className="screenshot"
-    alt="Selecting a private Lattice service"
-    src="../../img/cloud-dedicated/select-private-service.jpg"
-    width="500"
-/>
-
-8. Add a **Service Name** to describe your Lattice service. This name will be used to identify your Lattice service in GraphOS Studio.
+7. From the dropdown menu, select the Lattice service that you want to connect to your GraphOS router. The URL automatically appends a default path of `/api/graphql`, but you can change this path if you want to.
+8. Add a **Service Name** to describe your Lattice service. GraphOS Studio uses this name to identify your Lattice service.
 9. Paste the GraphQL schema for this subgraph in the **Schema** field. You can also upload a schema file by clicking the **Upload Schema** button.
 
 <ExpansionPanel title="Why do I need to provide a GraphQL Schema?">
 
-When your AWS resource is set to private, it isn't accessible by external services by default. This ensures a high level of security for your data, but it also means extra steps are needed to enable communication between your resource and our system. We need to know the schema of your GraphQL API so that we can generate the correct queries and mutations to send to your subgraph.
+When your AWS resource is set to private, it isn't accessible by external services by default. This ensures a high level of security for your data, but it also means extra steps are needed to enable communication between your resource and our system. GraphOS needs your GraphQL API's schema so it can generate the correct queries and mutations to send to your subgraph.
 
 </ExpansionPanel>
 
-10. Update the ID and the name of the supergraph that you want to add this private subgraph to. An ID and name are automatically generated based on your organization's name, but you can change both as needed.
+10. Update the ID and the name of the supergraph that you want to add this private subgraph to. An ID and name are automatically generated based on your GraphOS organization's name, but you can change both as needed.
 11. To finish, click **Create GraphOS Router**.
 
 Congratulations! You've now created a GraphOS cloud router with a private subgraph.
 
-#### Setup for existing graphs
+### Setup for existing graphs
 
 1. Go to the graph you want to connect in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
 2. From the left sidebar, open the **Subgraphs** tab of your graph.
 3. Click **Add a Subgraph** on the right of the page.
-4. In the dialog, select the **Private** option, then select the AWS service you want to add from the dropdown menu. A default path of `/api/graphql` is automatically added to the URL. You can change this path if you like.
-
-  <img
-    className="screenshot"
-    alt="Selecting a private service from existing services"
-    src="../../img/cloud-dedicated/select-private-service.jpg"
-    width="500"
-/>
-
-5. Add a **Service Name** to describe your Lattice service. This name will be used to identify your Lattice service in GraphOS Studio.
-
+4. In the dialog, select the **Private** option, then select the AWS service you want to add from the dropdown menu. The URL automatically appends a default path of `/api/graphql`, but you can change this path if you want to.
+5. Add a **Service Name** to describe your Lattice service. GraphOS Studio uses this name to identify your Lattice service.
 6. Paste the GraphQL schema for this subgraph in the **Schema** field. You can also upload a schema file by clicking the **Upload Schema** button.
 
 <ExpansionPanel title="Why do I need to provide a GraphQL Schema?">
 
-When your AWS resource is set to private, it isn't accessible by external services by default. This ensures a high level of security for your data, but it also means extra steps are needed to enable communication between your resource and our system. We need to know the schema of your GraphQL API so that we can generate the correct queries and mutations to send to your subgraph.
+When your AWS resource is set to private, it isn't accessible by external services by default. This ensures a high level of security for your data, but it also means extra steps are needed to enable communication between your resource and our system. GraphOS needs your GraphQL API's schema so it can generate the correct queries and mutations to send to your subgraph.
 
 </ExpansionPanel>
 
@@ -436,246 +339,8 @@ When your AWS resource is set to private, it isn't accessible by external servic
 
 Congratulations! You've now added a private subgraph to your GraphOS cloud router.
 
-## Further restrict access to private subgraphs
-
-Once you configure an Amazon VPC Lattice service to accept traffic from the Apollo AWS Organization, it is protected by multiple security layers:
-
-- The Amazon VPC Lattice service network only allows traffic with a valid signature and over HTTPS.
-- The Lattice service's configured authorization policy ensures traffic only comes from Apollo's AWS accounts. (This is the authorization policy you configured in step 6 [when creating your Lattice service](#step-2-create-an-aws-vpc-lattice-service).)
-- Apollo cloud router provisioning compares subgraphs in a supergraph's configuration against the list of known private subgraphs in its Apollo account. It refuses to create or update cloud routers with unknown private subgraphs.
-- Cloud routers only have permission to invoke private subgraphs listed in their supergraph configuration.
-
-You can further restrict access to your private subgraphs by configuring additional [conditions](https://docs.aws.amazon.com/IAM/latest/UserGuide/reference_policies_elements_condition.html) in your service's authorization policy.
-Specifically, you can add conditions to restrict traffic based on your organization's Apollo account ID or your supergraph's graph ref.
-
-
-### Update Lattice service authorization policy
-
-To update a Lattice service's authorization policy with additional restrictions, you first need the **Apollo account ID** and/or **graph ref** to which you want to restrict subgraph access.
-
-#### Obtain account ID and graph ref
-
-- <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">Contact Apollo</TrackableLink> to obtain your account ID. Specify you would like the account ID needed to update your Lattice service's authorization policy.
-
-  <Note>
-
-  The Apollo account ID you specify in your authorization policy is not the Apollo organization ID you can find in GraphOS Studio.
-
-  </Note>
-
-- You can find your supergraph's graph ref in your Apollo account:
-    - Log in to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
-    - Click on a graph variant on the **Graphs** page. The graph ref will be at the top of the page—click it to copy.
-
-
-If you want to provide subgraph access to multiple Apollo accounts or supergraphs, you can specify multiple account IDs and graph refs when updating your policy.
-
-#### Update policy
-
-If you are using the [Apollo Terraform module](https://github.com/apollographql/terraform-graphos-aws), you can set the  [`apollo_account_ids` and `apollo_graph_refs` variables](https://github.com/apollographql/terraform-graphos-aws#usage) to update your authorization policy. Provide one or more Apollo account IDs or graph refs:
-
-```txt showLineNumbers=false disableCopy=true
-apollo_account_ids = ["my_account_id", "another_account_id"]
-apollo_graph_refs  = ["my-graph@my-variant", "another-graph@my-variant"]
-```
-
-If you aren't using the Apollo Terraform module, follow these steps:
-
-1. In the AWS Console for your region of choice, go to the VPC service page:
-
-- [US East (N. Virginia) - us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
-- [Europe (Ireland) - eu-west-1](https://eu-west-1.console.aws.amazon.com/ram/home?region=eu-west-1)
-
-2. In the menu on the left, scroll down and open **Services** in the **VPC Lattice** section.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page left menu"
-    src="../../img/cloud-dedicated/vpc-lattice-menu.jpg"
-    width="175px"
-  />
-
-3. Click the name of the Lattice service whose authorization policy you want to configure.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page"
-    src="../../img/cloud-dedicated/select-lattice-service.jpg"
-  />
-
-4. In the **Service access** section, update your authorization policy. You can use the following as an example&mdash;make sure to replace the account ID and graph ref with your own.
-
-  ```json {13-17} showLineNumbers=false
-  {
-    "Version": "2012-10-17",
-    "Statement": [
-      {
-        "Effect": "Allow",
-        "Principal": "*",
-        "Action": "vpc-lattice-svcs:Invoke",
-        "Resource": "*",
-        "Condition": {
-          "ForAnyValue:StringLike": {
-            "aws:PrincipalOrgPaths": "o-9vaxczew6u/*/ou-leyb-l9pccq2t/ou-leyb-fvqz35yo/*"
-          },
-          // Restrict traffic based on Apollo account IDs or graphRefs
-          "StringEquals": {
-            "aws:PrincipalTag/Apollo:accountId": "my_account_id_xezf34",
-            "aws:PrincipalTag/Apollo:graphRef": "my-graph@my-variant"
-          }
-        }
-      }
-    ]
-  }
-  ```
-
-If there are multiple supergraphs which should have access to the subgraph, use a comma-separated string of graph refs for `aws:PrincipalTag/Apollo:graphRef`. For example:
-
-```json showLineNumbers=false disableCopy=true
-"aws:PrincipalTag/Apollo:graphRef": "my-graph@my-variant, my-graph@another-variant, another-graph@another-variant"
-```
-
-Similarly, you can use a comma-separated string of account IDs for `aws:PrincipalTag/Apollo:accountId`:
-
-```json showLineNumbers=false disableCopy=true
-"aws:PrincipalTag/Apollo:accountId": "my_account_id_xezf34", "my_account_id_dehs56"
-```
-
-## Remove access to private subgraphs
-
-To remove Cloud Dedicated access to private subgraphs, you need to remove both resource shares and service network associations. Keep in mind that any existing supergraph that sends traffic to your private subgraphs will stop working once you remove access.
-
-### Remove resource shares
-
-1. In the AWS Console for your region of choice, go to the Resource Access Manager service page:
-
-- [US East (N. Virginia) - us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
-- [Europe (Ireland) - eu-west-1](https://eu-west-1.console.aws.amazon.com/ram/home?region=eu-west-1)
-
-2. In the menu on the left, click **Resource shares** in the **Shared by me** section.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page left menu"
-    src="../../img/cloud-dedicated/vpc-lattice-menu.jpg"
-    width="175px"
-  />
-
-3. Select the resource share(s) associated with Cloud Dedicated and click the **Delete** button in the top right corner.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC resource share page"
-    src="../../img/cloud-dedicated/create-resource-share.jpg"
-  />
-
-4. Click **Delete** in the dialog that appears.
-
-### Remove service network associations
-
-1. In the AWS Console for your region of choice, go to the VPC service page:
-
-- [US East (N. Virginia) - us-east-1](https://us-east-1.console.aws.amazon.com/ram/home?region=us-east-1)
-- [Europe (Ireland) - eu-west-1](https://eu-west-1.console.aws.amazon.com/ram/home?region=eu-west-1)
-
-2. In the menu on the left, scroll down and open **Services** in the **VPC Lattice** section.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page left menu"
-    src="../../img/cloud-dedicated/vpc-lattice-menu.jpg"
-    width="175px"
-  />
-
-3. Click the name of the Lattice service you want to disconnect.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page"
-    src="../../img/cloud-dedicated/select-lattice-service.jpg"
-  />
-
-4. In the **Service network associations**, select the **graphos-cloud** service name.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page"
-    src="../../img/cloud-dedicated/graphos-service.jpg"
-  />
-
-5. Click the **Actions** button in the top right of that section, and click **Delete network associations**.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page"
-    src="../../img/cloud-dedicated/delete-network-associations.jpg"
-  />
-
-6. Follow the confirmation instructions and click **Delete**.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page"
-    src="../../img/cloud-dedicated/delete-network-associations-final.jpg"
-  />
-
-Deleting the network association can take a few seconds. Once the network association is deleted, Cloud Dedicated cannot contact your subgraphs anymore.
-
-## Amazon VPC Lattice monitoring
-
-To validate that traffic is flowing to your private subgraphs, you can use the metrics and access logs emitted by Amazon VPC Lattice:
-
-1. In the AWS Console for your region of choice, go to the VPC service page.
-
-2. In the menu on the left, scroll down and open **Services** in the **VPC Lattice** section.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC service page left menu"
-    src="../../img/cloud-dedicated/vpc-lattice-menu.jpg"
-    width="175px"
-  />
-
-3. Click on the name of the Lattice service used by the subgraph in question.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC Lattice service"
-    src="../../img/cloud-dedicated/vpc-lattice-service.png"
-  />
-
-4. Click on the **Monitoring** tab.
-
-From there, you can configure and enable access logs for your Amazon VPC Lattice service. You can also navigate to the Metrics tab to get a quick overview if traffic is flowing to your private subgraphs.
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC Lattice access logs"
-    src="../../img/cloud-dedicated/vpc-lattice-access-logs.png"
-  />
-
-  <img
-    className="screenshot"
-    alt="Amazon VPC Lattice metrics"
-    src="../../img/cloud-dedicated/vpc-lattice-metrics.png"
-  />
-
-You can also use [Amazon CloudWatch metrics emitted by Amazon VPC Lattice](https://docs.aws.amazon.com/vpc-lattice/latest/ug/monitoring-cloudwatch.html) to set up dashboards and alarms to understand the health of your private subgraphs.
-
-## Frequently asked questions
-
-#### How does Cloud Dedicated prevent other users from accessing my private subgraphs?
-
-When you associate a resource share for the first time, Cloud Dedicated will scan the Lattice services contained in the resource share to retrieve their ARNs and domain names.
-
-When you add a private subgraph to one of your supergraphs, Cloud Dedicated will check that the domain for that subgraph matches one of the Lattice services you have associated with your Apollo Organization.
-
-As a second line of defense, supergraphs use AWS IAM permissions and [SigV4](https://docs.aws.amazon.com/AmazonS3/latest/API/sig-v4-authenticating-requests.html) to only allow traffic to the subgraphs in the same Apollo organization.
-
-#### I want to use Amazon VPC Lattice within my own organization. Can I still use Lattice for private subgraphs?
-
-Yes. Cloud Dedicated will associate your Lattice services with its own service network, and you can associate a Lattice service with multiple service networks. You can also create multiple Lattice target groups or Lattice services for the same load balancer, IP addresses, Lambda functions, or other resources supported by Lattice target groups.
-
-## Tips and troubleshooting
-
-See the [troubleshooting guide](./lattice-troubleshooting) for tips and common errors.
+## Next steps
+
+After you've linked your VPC Lattice services with your cloud router, you may want to set up monitoring.
+The [Lattice management page](./lattice-management) provides information on monitoring and how to further restrict and remove access to subgraphs.
+See the [troubleshooting guide](./lattice-troubleshooting) if you're having issues with your Lattice setup.
